--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -9,16 +9,16 @@
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
-    "deploy:api": "cdk deploy EditorApiStack --require-approval never",
-    "deploy:identity": "cdk deploy IdentityStack --require-approval never",
-    "deploy:web": "cdk deploy EditorWebStack --require-approval never"
+    "deploy:api": "STACK=EditorApiStack cdk deploy EditorApiStack --require-approval never",
+    "deploy:identity": "STACK=IdentityStack cdk deploy IdentityStack --require-approval never",
+    "deploy:web": "STACK=EditorWebStack cdk deploy EditorWebStack --require-approval never"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.82.0",
+    "@aws-cdk/assert": "1.83.0",
     "@types/jest": "^26.0.19",
-    "@types/node": "10.17.27",
+    "@types/node": "14.14.20",
     "@types/uuid": "^8.3.0",
-    "aws-cdk": "1.82.0",
+    "aws-cdk": "1.83.0",
     "jest": "^26.4.2",
     "prettier": "^2.2.0",
     "ts-jest": "^26.2.0",
@@ -26,20 +26,20 @@
     "typescript": "~4.1.3"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "1.82.0",
-    "@aws-cdk/aws-certificatemanager": "1.82.0",
-    "@aws-cdk/aws-cloudfront": "1.82.0",
-    "@aws-cdk/aws-cloudfront-origins": "1.82.0",
-    "@aws-cdk/aws-codedeploy": "1.82.0",
-    "@aws-cdk/aws-cognito": "1.82.0",
-    "@aws-cdk/aws-iam": "1.82.0",
-    "@aws-cdk/aws-lambda": "1.82.0",
-    "@aws-cdk/aws-route53": "1.82.0",
-    "@aws-cdk/aws-route53-targets": "1.82.0",
-    "@aws-cdk/aws-s3": "1.82.0",
-    "@aws-cdk/aws-s3-deployment": "1.82.0",
-    "@aws-cdk/aws-ssm": "1.82.0",
-    "@aws-cdk/core": "1.82.0",
+    "@aws-cdk/aws-apigateway": "1.83.0",
+    "@aws-cdk/aws-certificatemanager": "1.83.0",
+    "@aws-cdk/aws-cloudfront": "1.83.0",
+    "@aws-cdk/aws-cloudfront-origins": "1.83.0",
+    "@aws-cdk/aws-codedeploy": "1.83.0",
+    "@aws-cdk/aws-cognito": "1.83.0",
+    "@aws-cdk/aws-iam": "1.83.0",
+    "@aws-cdk/aws-lambda": "1.83.0",
+    "@aws-cdk/aws-route53": "1.83.0",
+    "@aws-cdk/aws-route53-targets": "1.83.0",
+    "@aws-cdk/aws-s3": "1.83.0",
+    "@aws-cdk/aws-s3-deployment": "1.83.0",
+    "@aws-cdk/aws-ssm": "1.83.0",
+    "@aws-cdk/core": "1.83.0",
     "source-map-support": "^0.5.16"
   },
   "prettier": {
