--- a/api/Pipfile
+++ b/api/Pipfile
@@ -4,20 +4,20 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-connexion = {extras = ["swagger-ui"], version = "*"}
-openalchemy = "2.0.1"
-pyyaml = "*"
-serverless-wsgi = "*"
-flask-cors = "*"
+connexion = {extras = ["swagger-ui"], version = "2.7.0"}
+openalchemy = "2.1.0"
+pyyaml = "5.3.1"
+serverless-wsgi = "1.7.6"
+flask-cors = "3.0.10"
 
 [dev-packages]
-black = "*"
+black = "20.861"
 pytest = "6.2.0"
-schemathesis = "*"
-pytest-cov = "*"
+schemathesis = "2.8.5"
+pytest-cov = "2.10.1"
 
 [requires]
-python_version = "3.9"
+python_version = "3"
 
 [pipenv]
 allow_prereleases = true
