--- a/.github/workflows/ci-cd-api.yaml
+++ b/.github/workflows/ci-cd-api.yaml
@@ -103,7 +103,7 @@ jobs:
           name: api
           path: api/dist/deployment-package.zip
 
-  api-deploy:
+  deploy:
     runs-on: ubuntu-latest
     needs:
       - test
