--- a/test/api/Pipfile
+++ b/test/api/Pipfile
@@ -4,12 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pytest = "6.2.0"
-schemathesis = "2.8.4"
-hypothesis = "5.46.0"
+pytest = "6.2.1"
+pyyaml = "5.3.1"
 
 [dev-packages]
-black = "*"
+black = "20.8b1"
 
 [requires]
 python_version = "3.9"
