--- a/.github/workflows/ci-cd-api.yaml
+++ b/.github/workflows/ci-cd-api.yaml
@@ -7,7 +7,7 @@ on:
     paths:
       - ".github/workflows/ci-cd-api.yaml"
       - "api/**"
-      - "test/**"
+      - "test/api/**"
       - "infrastructure/**"
       - "!infrastructure/lib/*-stack.ts"
       - "infrastructure/lib/api-stack.ts"
