--- a/.github/workflows/ci-cd-api.yaml
+++ b/.github/workflows/ci-cd-api.yaml
@@ -170,6 +170,6 @@ jobs:
         run: |
           pipenv install --dev
       - name: Run tests
-        working-directory: ./test
+        working-directory: ./test/api
         run: |
           pipenv run test
