--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,7 +19,7 @@ repos:
       - id: black
         language_version: python3.9
   - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v5.6.4
+    rev: v5.7.0
     hooks:
       - id: isort
   - repo: https://github.com/chewse/pre-commit-mirrors-pydocstyle
@@ -32,14 +32,19 @@ repos:
     rev: v0.790
     hooks:
       - id: mypy
+        name: mypy (api)
+        files: ^api/
         additional_dependencies:
           - "sqlalchemy-stubs"
+      - id: mypy
+        name: mypy (test api)
+        files: ^test/api
   - repo: https://github.com/pre-commit/mirrors-pylint
     rev: "v2.6.0"
     hooks:
       - id: pylint
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: "v2.2.0"
+    rev: "v2.2.1"
     hooks:
       - exclude: ".vscode|.ts$"
         id: prettier
@@ -50,6 +55,9 @@ repos:
       - id: check-case-conflict
       - id: check-docstring-first
       - id: check-merge-conflict
+      - id: check-json
+      - id: check-yaml
+      - id: check-toml
       - id: debug-statements
       - id: name-tests-test
         args: ["--django"]
@@ -63,21 +71,27 @@ repos:
       - id: forbid-tabs
       - id: remove-tabs
   - repo: https://github.com/DavidAnson/markdownlint-cli2
-    rev: v0.0.11
+    rev: v0.0.13
     hooks:
       - id: markdownlint-cli2
         language_version: system
   - repo: https://github.com/pre-commit/mirrors-eslint
-    rev: "v7.14.0"
+    rev: "v7.16.0"
     hooks:
       - id: eslint
         files: \.ts$
         types: [file]
         args: ["--fix", "--ext .ts"]
         additional_dependencies:
-          - eslint@7.14.0
-          - "@angular-eslint/eslint-plugin@0.8.0-beta.2"
-          - "@typescript-eslint/eslint-plugin@4.8.2"
-          - eslint-plugin-prettier@3.1.4
+          - eslint@7.16.0
+          - "@angular-eslint/eslint-plugin@1.0.0"
+          - "@typescript-eslint/eslint-plugin@4.12.0"
+          - "@angular-eslint/eslint-plugin-template@1.0.0"
+          - eslint-plugin-prettier@3.3.0
           - prettier@2.2.1
-          - eslint-config-prettier@6.15.0
+          - eslint-config-prettier@7.1.0
+          - typescript@4.1.3
+          - "@typescript-eslint/parser@4.12.0"
+          - eslint-plugin-jsdoc@30.7.13
+          - eslint-plugin-import@2.22.1
+          - eslint-plugin-prefer-arrow@1.2.2
