--- a/.github/workflows/ci-cd-web.yaml
+++ b/.github/workflows/ci-cd-web.yaml
@@ -14,7 +14,7 @@ on:
       - "!**.md"
 
 jobs:
-  web-test:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -38,7 +38,7 @@ jobs:
         run: |
           npm run test:ci
 
-  web-build:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -76,11 +76,11 @@ jobs:
           name: web-artifacts
           path: web/dist/editor/
 
-  web-deploy:
+  deploy:
     runs-on: ubuntu-latest
     needs:
-      - web-test
-      - web-build
+      - test
+      - build
     steps:
       - uses: actions/checkout@v2
       - name: set up node
@@ -107,12 +107,10 @@ jobs:
       - name: deploy
         working-directory: ./infrastructure
         env:
-          STACK: EditorWebStack
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: us-east-1
           AWS_ACCOUNT: ${{ secrets.AWS_ACCOUNT }}
           AWS_OPEN_ALCHEMY_CERTIFICATE_ARN: ${{ secrets.AWS_OPEN_ALCHEMY_CERTIFICATE_ARN }}
-          AWS_OPEN_ALCHEMY_API_CERTIFICATE_ARN: ${{ secrets.AWS_OPEN_ALCHEMY_API_CERTIFICATE_ARN }}
         run: |
           npm run deploy:web
