--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -30,6 +30,8 @@
     "@aws-cdk/aws-certificatemanager": "1.83.0",
     "@aws-cdk/aws-cloudfront": "1.83.0",
     "@aws-cdk/aws-cloudfront-origins": "1.83.0",
+    "@aws-cdk/aws-cloudwatch": "1.83.0",
+    "@aws-cdk/aws-cloudwatch-actions": "1.83.0",
     "@aws-cdk/aws-codedeploy": "1.83.0",
     "@aws-cdk/aws-cognito": "1.83.0",
     "@aws-cdk/aws-iam": "1.83.0",
@@ -38,6 +40,8 @@
     "@aws-cdk/aws-route53-targets": "1.83.0",
     "@aws-cdk/aws-s3": "1.83.0",
     "@aws-cdk/aws-s3-deployment": "1.83.0",
+    "@aws-cdk/aws-sns": "1.83.0",
+    "@aws-cdk/aws-sns-subscriptions": "1.83.0",
     "@aws-cdk/aws-ssm": "1.83.0",
     "@aws-cdk/core": "1.83.0",
     "source-map-support": "^0.5.16"
