--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,6 +52,7 @@ repos:
     rev: v3.3.0
     hooks:
       - id: check-added-large-files
+        exclude: "sdk/package-lock.json"
       - id: check-case-conflict
       - id: check-docstring-first
       - id: check-merge-conflict
