--- a/.github/workflows/ci-cd-sdk.yaml
+++ b/.github/workflows/ci-cd-sdk.yaml
@@ -100,30 +100,22 @@ jobs:
           name: sdk
           path: sdk/dist/
 
-  # production-test:
-  #   runs-on: ubuntu-latest
-  #   needs:
-  #     - publish
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: set up node
-  #       uses: actions/setup-node@v2.1.4
-  #       with:
-  #         node-version: 14.x
-  #     - name: install dependencies
-  #       working-directory: ./test/sdk/
-  #       if: steps.cache-node_modules.outputs.cache-hit != 'true'
-  #       run: |
-  #         npm install || sleep 30 && npm install || sleep 30 && npm install || sleep 30 && npm install
-  #     - name: Run tests
-  #       working-directory: ./test/sdk/
-  #       env:
-  #         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #         AWS_DEFAULT_REGION: "us-east-1"
-  #         USER_POOL_ID: ${{ secrets.USER_POOL_ID }}
-  #         CLIENT_ID: ${{ secrets.CLIENT_ID }}
-  #         TEST_USERNAME: ${{ secrets.TEST_USERNAME_SDK }}
-  #         TEST_PASSWORD: ${{ secrets.TEST_PASSWORD_SDK }}
-  #       run: |
-  #         npm run test
+  production-test:
+    runs-on: ubuntu-latest
+    needs:
+      - publish
+    steps:
+      - uses: actions/checkout@v2
+      - name: set up node
+        uses: actions/setup-node@v2.1.4
+        with:
+          node-version: 14.x
+      - name: install dependencies
+        working-directory: ./test/sdk/
+        if: steps.cache-node_modules.outputs.cache-hit != 'true'
+        run: |
+          npm install || sleep 30 && npm install || sleep 30 && npm install || sleep 30 && npm install
+      - name: Run tests
+        working-directory: ./test/sdk/
+        run: |
+          npm run test
