--- a/.github/workflows/ci-cd-sdk.yaml
+++ b/.github/workflows/ci-cd-sdk.yaml
@@ -91,7 +91,7 @@ jobs:
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
-          PUBLISHED_VERSION=$(npm view "@open-alchemy/package-sdk" dist-tags.latest)
+          PUBLISHED_VERSION=$(npm view "@open-alchemy/editor-sdk" dist-tags.latest)
           PACKAGE_VERSION=$(node -p -e "require('./package.json').version")
           [[ "$PUBLISHED_VERSION" == "$PACKAGE_VERSION" ]] || npm publish --access public
       - name: upload artifacts that were released
