--- a/web/package.json
+++ b/web/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-browser": "~11.0.2",
     "@angular/platform-browser-dynamic": "~11.0.2",
     "@angular/router": "~11.0.2",
+    "angular-oauth2-oidc": "^10.0.3",
     "ngx-ace-wrapper": "^11.0.0",
     "rxjs": "~6.6.3",
     "tslib": "^2.1.0",
