--- a/api/openapi/editor.yaml
+++ b/api/openapi/editor.yaml
@@ -598,16 +598,18 @@ components:
             - sub_type
             - properties
             - schema
+    ArtifactResponsePropertiesAll:
+      oneOf:
+        - $ref: "#/components/schemas/ArtifactResponsePropertiesSimple"
+        - $ref: "#/components/schemas/ArtifactResponsePropertiesJson"
+        - $ref: "#/components/schemas/ArtifactResponsePropertiesRelationship"
+        - $ref: "#/components/schemas/ArtifactResponsePropertiesBackref"
     ArtifactResponseProperty:
       description: The artifacts for a property
       type: object
       properties:
         artifacts:
-          oneOf:
-            - $ref: "#/components/schemas/ArtifactResponsePropertiesSimple"
-            - $ref: "#/components/schemas/ArtifactResponsePropertiesJson"
-            - $ref: "#/components/schemas/ArtifactResponsePropertiesRelationship"
-            - $ref: "#/components/schemas/ArtifactResponsePropertiesBackref"
+          $ref: "#/components/schemas/ArtifactResponsePropertiesAll"
     ArtifactResponseProperties:
       description: The artifacts for the properties of a model
       type: object
