--- a/.github/workflows/production-test-api.yaml
+++ b/.github/workflows/production-test-api.yaml
@@ -20,7 +20,9 @@ jobs:
       - id: cache-pipenv
         uses: actions/cache@v2
         with:
-          path: test/api/.venv
+          path: |
+            ~/.cache/pipenv
+            test/api/.venv
           key: ${{ runner.os }}-test-api-${{ hashFiles('test/api/Pipfile.lock') }}
       - name: install dependencies
         working-directory: ./test/api
@@ -31,5 +33,7 @@ jobs:
           pipenv install --dev
       - name: Run tests
         working-directory: ./test/api
+        env:
+          PIPENV_VENV_IN_PROJECT: 1
         run: |
-          pipenv run test
+          pipenv run test || pipenv --rm && pipenv install --dev && pipenv run test
