--- a/web/package.json
+++ b/web/package.json
@@ -32,9 +32,11 @@
     "@ngrx/store": "^10.1.2",
     "@ngrx/store-devtools": "^10.1.2",
     "@open-alchemy/editor-sdk": "^0.1.10",
+    "@open-alchemy/package-sdk": "^4.0.1",
     "ngx-ace-wrapper": "^11.0.0",
     "rxjs": "~6.6.3",
     "tslib": "^2.1.0",
+    "yaml": "^1.10.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
