add component for pip install

--- a/web/package.json
+++ b/web/package.json
@@ -35,6 +35,7 @@
     "@open-alchemy/package-sdk": "^5.0.0",
     "angular-oauth2-oidc": "^10.0.3",
     "ngx-ace-wrapper": "^11.0.0",
+    "ngx-clipboard": "^14.0.1",
     "rxjs": "~6.6.3",
     "tslib": "^2.1.0",
     "yaml": "^1.10.0",
